fix(*): handle overflow text & validation empty

--- a/src/modules/common/components/TextEditable/index.module.scss
+++ b/src/modules/common/components/TextEditable/index.module.scss
@@ -1,3 +1,7 @@
+.text_editable_input{
+  max-width: 100%;
+}
+
 .text_editable_input__active,
 .text_editable_copy__active {
   font: inherit;
